--- a/src/css/additional-styles/theme.scss
+++ b/src/css/additional-styles/theme.scss
@@ -105,6 +105,8 @@ button:focus,
 
         img {
             opacity: .32;
+            height: 300px;
+            object-fit: cover;
         }
 
         > div > div {
